--- a/roles/common-snaps/tasks/main.yml
+++ b/roles/common-snaps/tasks/main.yml
@@ -12,9 +12,9 @@
   loop:
     - "snap-store"
     - "breaktimer"
-    - "drawio"
+      #- "drawio"
     # https://github.com/jgraph/drawio-desktop/issues/138,
     # snap 12.6.5 > flatpak 12.4 (as of 2020-02-28)
-    - "spotify"
-    - "ncspot"
+    #- "spotify"
+    #- "ncspot"
     - "standard-notes"
