--- a/personal_computer.yml
+++ b/personal_computer.yml
@@ -3,6 +3,7 @@
   connection: local
   roles:
     - {role: create-user, tags: ['create-user']}
+    - {role: nvim, tags: ['nvim']}
     - {role: zsh, tags: ['zsh']}
     - {role: cherrytree, tags: ['cherrytree']}
     - {role: docker, tags: ['docker']}
