--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,4 +1,5 @@
 ---
+default_xdg_config_home: "{{ ansible_user_dir }}/.config"
 docker_compose_version: 1.25.4
 flameshot_version: 0.6.0
 gh_version: 0.6.4
