--- a/roles/nvim/tasks/main.yml
+++ b/roles/nvim/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+- debug:
+    msg: System {{ neovim_config_file }}
+    #msg: System {{ default(defa) }}
+
+- debug:
+    msg: Hello david
+
 - tags: [neovim]
   block:
     - name: Install neovim
@@ -20,25 +27,25 @@
         mode: 0o700
         owner: "{{ neovim_user_id }}"
       when: neovim_plugins
-
-    - name: Install vim-plug
-      get_url:
-        url: https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
-        dest: "{{ neovim_autoload_dir }}/plug.vim"
-        mode: 0o600
-        owner: "{{ neovim_user_id }}"
-      when: neovim_plugins
-
+#
+#    - name: Install vim-plug
+#      get_url:
+#        url: https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+#        dest: "{{ neovim_autoload_dir }}/plug.vim"
+#        mode: 0o600
+#        owner: "{{ neovim_user_id }}"
+#      when: neovim_plugins
+#
     - name: Create base directory for configurations of neovim
       file:
         path: "{{ neovim_config_dir }}"
         state: directory
         mode: 0o700
         owner: "{{ neovim_user_id }}"
-
-    - name: Configure neovim
-      template:
-        src: init.vim
-        dest: "{{ neovim_config_file }}"
-        mode: 0o600
-        owner: "{{ neovim_user_id }}"
+#
+#    - name: Configure neovim
+#      template:
+#        src: init.vim
+#        dest: "{{ neovim_config_file }}"
+#        mode: 0o600
+#        owner: "{{ neovim_user_id }}"
