--- a/roles/nvim/defaults/main.yml
+++ b/roles/nvim/defaults/main.yml
@@ -1,31 +1,39 @@
 # Base directory for configuration files of neovim
 #neovim_config_dir: "{{ neovim_user_dir }}/.config/nvim"
 #config_dir: "{{ ansible_env.XDG_CONFIG_HOME | default(default_xdg_config_home) }}"
-neovim_config_dir: "{{ ansible_env.XDG_CONFIG_HOME | default(default_xdg_config_home) }}/nvim"
+neovim:
+  config_dir: "{{ ansible_env.XDG_CONFIG_HOME | default(default_xdg_config_home) }}/nvim"
 #neovim_config_dir: "{{ config_dir }}/nvim"
 
 # Autoload directory of neovim
 #neovim_autoload_dir: "{{ neovim_user_dir }}/.local/share/nvim/site/autoload/"
-neovim_autoload_dir: "{{ neovim_config_dir }}/autoload/"
+neovim:
+  autoload_dir: "{{ neovim.config_dir }}/autoload/"
 
 # Path to configuration file of neovim
-neovim_config_file: "{{ neovim_config_dir }}/init.vim"
+neovim:
+  config_file: "{{ neovim.config_dir }}/init.vim"
 
 # Configuration for neovim
-neovim_configuration: ~
+neovim:
+  configuration: ~
 
 # Packages which shall be installed
-neovim_packages:
+neovim:
+  packages:
   - neovim
   - python-neovim
   - python3-neovim
 
 # List of neovim plugins
-neovim_plugins: []
+neovim:
+  plugins: []
 
 # User for whom neovim shall be configured
-neovim_user_id: "{{ ansible_user_id }}"
+neovim:
+  user_id: "{{ ansible.user_id }}"
 
 # Home directory of the user for whom neovim shall be configured
-neovim_user_dir: "{{ getent_passwd[neovim_user_id][4] }}"
+neovim:
+  user_dir: "{{ getent_passwd[neovim_user_id][4] }}"
 
