--- a/roles/nvim/tasks/main.yml
+++ b/roles/nvim/tasks/main.yml
@@ -11,42 +11,44 @@
     - name: Install neovim
       become: true
       package:
-        name: "{{ neovim_packages }}"
+        name: "{{ neovim.packages }}"
         state: present
 
     - name: Gather facts about user for whom neovim shall be configured
       getent:
         database: passwd
-        key: "{{ neovim_user_id }}"
+        key: "{{ neovim.user_id }}"
         split: ~
 
 #    - name: Create neovim directory for autoloading configurations
 #      file:
-#        path: "{{ neovim_autoload_dir }}"
+#        path: "{{ neovim.autoload_dir }}"
 #        state: directory
 #        recurse: yes
 #        mode: 0o700
-#        owner: "{{ neovim_user_id }}"
+#        owner: "{{ neovim.user_id }}"
 #      when: neovim_plugins
 #
 #    - name: Install vim-plug
 #      get_url:
 #        url: https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
-#        dest: "{{ neovim_autoload_dir }}/plug.vim"
+#        dest: "{{ neovim.autoload_dir }}/plug.vim"
 #        mode: 0o600
-#        owner: "{{ neovim_user_id }}"
+#        owner: "{{ neovim.user_id }}"
 #      when: neovim_plugins
 #
 #    - name: Create base directory for configurations of neovim
 #      file:
-#        path: "{{ neovim_config_dir }}"
+#        path: "{{ neovim.config_dir }}"
 #        state: directory
 #        mode: 0o700
-#        owner: "{{ neovim_user_id }}"
+#        owner: "{{ neovim.user_id }}"
 #
 #    - name: Configure neovim
 #      template:
 #        src: init.vim
-#        dest: "{{ neovim_config_file }}"
+#        dest: "{{ neovim.config_file }}"
 #        mode: 0o600
-#        owner: "{{ neovim_user_id }}"
+#        owner: "{{ neovim.user_id }}"
+
+
