--- a/roles/virtualbox/tasks/main.yml
+++ b/roles/virtualbox/tasks/main.yml
@@ -1,11 +1,15 @@
 ---
 
 - name: Configure the Oracle APT key
+  become: true 
   apt_key: url=https://www.virtualbox.org/download/oracle_vbox.asc state=present
 
 - name: Configure the VirtualBox APT repositories
+  become: true 
   apt_repository: repo="deb http://download.virtualbox.org/virtualbox/debian {{ ansible_distribution_release }} contrib" state=present
 
 - name: Install VirtualBox {{ virtualbox.version }}
-  apt: pkg=virtualbox-{{ virtualbox.version }} state=present
+  become: true 
+  apt: pkg=virtualbox state=present
+  #apt: pkg=virtualbox-{{ virtualbox.version }} state=present
 
